--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -51,7 +51,7 @@
 
 
     <build>
-        <finalName>ZooStoreStorage</finalName>
+        <finalName>ZooStoreBff</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
