actuator testing for health checks

--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -8,3 +8,9 @@ server.port=8083
 
 ZOO_STORAGE_API_HOST=http://bff-zoo-storage-1:8082
 ZOO_STORE_API_HOST=http://bff-zoo-store-1:8080
+
+#management.endpoints.enabled-by-default=true
+#management.endpoint.info.enabled=true
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+management.endpoint.health.show-components=always
