--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,7 +73,9 @@ services:
            "spring.datasource.username" : "${ZOO_DB_USER}",
            "spring.datasource.password" : "${ZOO_DB_ROOT_PASSWORD}",
            "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQLDialect",
-           "spring.jpa.hibernate.ddl-auto" : "update"
+           "spring.jpa.hibernate.ddl-auto" : "update",
+           "management.endpoints.enabled-by-default" : "true",
+           "management.endpoint.info.enabled" : "true"
          }'
     volumes:
       - .m2:/root/.m2
