--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,13 @@
             <version>4.4.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+            <version>3.1.2</version>
+        </dependency>
+
+
     </dependencies>
 
 
